<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/common_bg_content"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/common_margin"
        android:text="@string/cooperate_rule_now"
        android:textColor="@color/common_text_black_3"
        android:textSize="@dimen/common_text_size_4" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_divider"
        android:contentDescription="@string/img_desc"
        android:src="@color/common_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/common_margin" >

        <TextView
            android:id="@+id/tv_rule_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/common_text_green"
            android:textSize="@dimen/common_text_size_1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin" >

            <TextView
                android:id="@+id/tv_first_commission_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cooperate_rule_first_commission"
                android:textColor="@color/common_text_black_3"
                android:textSize="@dimen/common_text_size_4" />

            <TextView
                android:id="@+id/tv_first_commission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:textColor="@color/common_text_black_5"
                android:textSize="@dimen/common_text_size_4" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin" >

            <TextView
                android:id="@+id/tv_tail_commission_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cooperate_rule_tail_commission"
                android:textColor="@color/common_text_black_3"
                android:textSize="@dimen/common_text_size_4" />

            <TextView
                android:id="@+id/tv_tail_commission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:textColor="@color/common_text_black_5"
                android:textSize="@dimen/common_text_size_4" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin" >

            <TextView
                android:id="@+id/tv_commission_point_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cooperate_rule_commission_point"
                android:textColor="@color/common_text_black_3"
                android:textSize="@dimen/common_text_size_4" />

            <TextView
                android:id="@+id/tv_commission_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:textColor="@color/common_text_black_5"
                android:textSize="@dimen/common_text_size_4" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp" >

            <TextView
                android:id="@+id/tv_pay_type_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cooperate_rule_pay_type"
                android:textColor="@color/common_bg_top_bar"
                android:textSize="@dimen/common_text_size_4" />

            <TextView
                android:id="@+id/tv_pay_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:textColor="@color/common_bg_top_bar"
                android:textSize="@dimen/common_text_size_4" />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_divider"
            android:layout_marginTop="@dimen/common_margin"
            android:contentDescription="@string/img_desc"
            android:src="@color/common_divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cooperate_rule_time"
                android:textColor="@color/common_text_black_5"
                android:textSize="@dimen/common_text_size_5" />

            <TextView
                android:id="@+id/tv_cooperate_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:textColor="@color/common_text_black_5"
                android:textSize="@dimen/common_text_size_5" />
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin" >

            <TextView
                android:id="@+id/tv_cooperate_rule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cooperate_rule"
                android:minHeight="100dp"
                android:textColor="@color/common_text_black_5"
                android:textSize="@dimen/common_text_size_5" />

        </RelativeLayout>
    </LinearLayout>

    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_divider"
        android:contentDescription="@string/img_desc"
        android:src="@color/common_divider" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/common_bg_content"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/common_margin"
        android:text="@string/cooperate_rule_before"
        android:textColor="@color/common_text_black_3"
        android:textSize="@dimen/common_text_size_4" />
    
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_divider"
        android:contentDescription="@string/img_desc"
        android:src="@color/common_divider" />
    
</LinearLayout>