<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_top_bar_height"
        android:background="@color/common_bg_top_bar" >

        <ImageView
            android:id="@id/id_back"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@drawable/common_top_bar_back_bg"
            android:contentDescription="@string/img_desc"
            android:gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/ic_topbar_back" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rb_call_log"
                style="@style/contact_tab_appearance"
                android:layout_width="75dp"
                android:layout_height="32dp"
                android:background="@drawable/contact_tab_bg_left"
                android:checked="true"
                android:text="@string/call_log" />

            <RadioButton
                android:id="@+id/rb_contact"
                style="@style/contact_tab_appearance"
                android:layout_width="75dp"
                android:layout_height="32dp"
                android:background="@drawable/contact_tab_bg_right"
                android:text="@string/contact" />
        </RadioGroup>
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_divider"
        android:contentDescription="@string/img_desc"
        android:src="@color/common_divider" />
    
    <FrameLayout
        android:id="@+id/contact_frag_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/common_bg_content" />

</LinearLayout>